--- a/com.tencent.wechat/com.tencent.wechat.yml
+++ b/com.tencent.wechat/com.tencent.wechat.yml
@@ -18,10 +18,11 @@ finish-args:
   - --filesystem=xdg-videos:ro
   - --filesystem=xdg-download
   - --filesystem=home/.xwechat:create
-  - --talk-name=org.freedesktop.FileManager1
   - --talk-name=org.freedesktop.Notifications
   - --talk-name=org.kde.StatusNotifierWatcher
   - --own-name=org.kde.*
+  - --env=QT_AUTO_SCREEN_SCALE_FACTOR=1
+  - --env=QT_QPA_PLATFORM=xcb
 
 modules:
   - name: bzip2
@@ -44,7 +45,6 @@ modules:
       - tar xvJf data.tar.xz
       - mv opt /app
       - install -Dm755 wechat.sh /app/bin/wechat
-      - install -Dm755 dde-file-manager.sh /app/bin/dde-file-manager
       - install -Dm644 com.tencent.wechat.desktop /app/share/applications/com.tencent.wechat.desktop
       - install -Dm644 usr/share/icons/hicolor/256x256/apps/wechat.png /app/share/icons/hicolor/256x256/apps/com.tencent.wechat.png
       - install -Dm644 com.tencent.wechat.metainfo.xml /app/share/metainfo/com.tencent.wechat.metainfo.xml
@@ -56,8 +56,6 @@ modules:
         dest-filename: wechat-linux-x64.deb
       - type: file
         path: wechat.sh
-      - type: file
-        path: dde-file-manager.sh
       - type: file
         path: com.tencent.wechat.desktop
       - type: file
