--- a/com.tencent.wechat/com.tencent.wechat.desktop
+++ b/com.tencent.wechat/com.tencent.wechat.desktop
@@ -3,7 +3,7 @@ Version=1.0
 Type=Application
 
 Name=WeChat
-Comment=Free messaging and calling app
+Comment=Free messaging and calling app.
 Categories=Network;
 
 Icon=com.tencent.wechat
